<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="vm"
            type="com.github.galcyurio.todo.addedittask.AddEditTaskViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".addedittask.AddEditTaskFragment"
        >

        <EditText
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Type title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={vm.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText"
            />

        <EditText
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="start"
            android:hint="Type description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:text="@={vm.description}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:ignore="HardcodedText"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
