<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="Add"
        app:showAsAction="always"
        tools:ignore="HardcodedText"
        />
</menu>